# orishiku-dot-com

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: cli.py  settings.py
src/common/commands/: app.py
src/main/: app.py
