[tool.poetry]
name = "orishiku-dot-com"
version = "0.1.0"
description = "My Personal website"
authors = ["Francisco Prieto <ifr.prieto.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
uvicorn = "^0.23.2"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
